tests/NormalTests/paczka1/fuzzy1/11958617.err
Error in line 11: Urbtx S23 12,5
Error in line 16: S617 S617 89,1
Error in line 20: dWUA8RclyPY S23 34,0
Error in line 31: 82BpcCxZ9 S175 57,9
Error in line 26: 1dE8KOm S617 69,1
Error in line 34: 1dE8KOm S23 51,3
